Removed "clear:both" divs that break the issue form with long sidebar content.
git-svn-id: svn+ssh://rubyforge.org/var/svn/redmine/trunk@8858 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -280,6 +280,7 @@ div.square {
 .contextual input, .contextual select {font-size:0.9em;}
 .message .contextual { margin-top: 0; }
 
+.splitcontent {overflow:auto;}
 .splitcontentleft{float:left; width:49%;}
 .splitcontentright{float:right; width:49%;}
 form {display: inline;}
